; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_alpha-tdep.c_alpha_push_dummy_call.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_alpha-tdep.c_alpha_push_dummy_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.type = type { i32 }
%struct.gdbarch = type { i32 }
%struct.regcache = type { i32 }
%struct.value = type { i32 }
%struct.alpha_arg = type { i8*, i32, i32 }

@ALPHA_REGISTER_SIZE = common dso_local global i32 0, align 4
@ALPHA_NUM_ARG_REGS = common dso_local global i32 0, align 4
@ALPHA_T12_REGNUM = common dso_local global i32 0, align 4
@ALPHA_RA_REGNUM = common dso_local global i32 0, align 4
@builtin_type_int32 = common dso_local global %struct.type* null, align 8
@builtin_type_int64 = common dso_local global %struct.type* null, align 8
@builtin_type_ieee_double_little = common dso_local global %struct.type* null, align 8
@ALPHA_A0_REGNUM = common dso_local global i64 0, align 8
@ALPHA_FPA0_REGNUM = common dso_local global i64 0, align 8
@ALPHA_SP_REGNUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdbarch*, i32, %struct.regcache*, i32, i32, %struct.value**, i32, i32, i32)* @alpha_push_dummy_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alpha_push_dummy_call(%struct.gdbarch* %0, i32 %1, %struct.regcache* %2, i32 %3, i32 %4, %struct.value** %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca %struct.gdbarch*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.regcache*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.value**, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca %struct.alpha_arg*, align 8
  %22 = alloca %struct.alpha_arg*, align 8
  %23 = alloca i8*, align 8
  %24 = alloca i64, align 8
  %25 = alloca i32, align 4
  %26 = alloca %struct.value*, align 8
  %27 = alloca %struct.type*, align 8
  %28 = alloca i8*, align 8
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  store %struct.gdbarch* %0, %struct.gdbarch** %10, align 8
  store i32 %1, i32* %11, align 4
  store %struct.regcache* %2, %struct.regcache** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store %struct.value** %5, %struct.value*** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %32 = load i32, i32* %17, align 4
  %33 = icmp ne i32 %32, 0
  %34 = zext i1 %33 to i64
  %35 = select i1 %33, i32 8, i32 0
  store i32 %35, i32* %20, align 4
  %36 = load i32, i32* %14, align 4
  %37 = sext i32 %36 to i64
  %38 = mul i64 %37, 16
  %39 = trunc i64 %38 to i32
  %40 = call i64 @alloca(i32 %39)
  %41 = inttoptr i64 %40 to %struct.alpha_arg*
  store %struct.alpha_arg* %41, %struct.alpha_arg** %21, align 8
  %42 = load i32, i32* @ALPHA_REGISTER_SIZE, align 4
  %43 = load i32, i32* @ALPHA_NUM_ARG_REGS, align 4
  %44 = mul nsw i32 %42, %43
  %45 = zext i32 %44 to i64
  %46 = call i8* @llvm.stacksave()
  store i8* %46, i8** %23, align 8
  %47 = alloca i8, i64 %45, align 16
  store i64 %45, i64* %24, align 8
  %48 = load %struct.regcache*, %struct.regcache** %12, align 8
  %49 = load i32, i32* @ALPHA_T12_REGNUM, align 4
  %50 = load i32, i32* %11, align 4
  %51 = call i32 @regcache_cooked_write_signed(%struct.regcache* %48, i32 %49, i32 %50)
  %52 = load %struct.regcache*, %struct.regcache** %12, align 8
  %53 = load i32, i32* @ALPHA_RA_REGNUM, align 4
  %54 = load i32, i32* %13, align 4
  %55 = call i32 @regcache_cooked_write_signed(%struct.regcache* %52, i32 %53, i32 %54)
  store i32 0, i32* %19, align 4
  %56 = load %struct.alpha_arg*, %struct.alpha_arg** %21, align 8
  store %struct.alpha_arg* %56, %struct.alpha_arg** %22, align 8
  br label %57

57:                                               ; preds = %162, %9
  %58 = load i32, i32* %19, align 4
  %59 = load i32, i32* %14, align 4
  %60 = icmp slt i32 %58, %59
  br i1 %60, label %61, label %167

61:                                               ; preds = %57
  %62 = load %struct.value**, %struct.value*** %15, align 8
  %63 = load i32, i32* %19, align 4
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds %struct.value*, %struct.value** %62, i64 %64
  %66 = load %struct.value*, %struct.value** %65, align 8
  store %struct.value* %66, %struct.value** %26, align 8
  %67 = load %struct.value*, %struct.value** %26, align 8
  %68 = call i32 @VALUE_TYPE(%struct.value* %67)
  %69 = call %struct.type* @check_typedef(i32 %68)
  store %struct.type* %69, %struct.type** %27, align 8
  %70 = load %struct.type*, %struct.type** %27, align 8
  %71 = call i32 @TYPE_CODE(%struct.type* %70)
  switch i32 %71, label %142 [
    i32 129, label %72
    i32 134, label %72
    i32 133, label %72
    i32 128, label %72
    i32 131, label %72
    i32 130, label %92
    i32 132, label %124
  ]

72:                                               ; preds = %61, %61, %61, %61, %61
  %73 = load %struct.type*, %struct.type** %27, align 8
  %74 = call i32 @TYPE_LENGTH(%struct.type* %73)
  %75 = icmp eq i32 %74, 4
  br i1 %75, label %76, label %81

76:                                               ; preds = %72
  %77 = load %struct.type*, %struct.type** @builtin_type_int32, align 8
  store %struct.type* %77, %struct.type** %27, align 8
  %78 = load %struct.type*, %struct.type** %27, align 8
  %79 = load %struct.value*, %struct.value** %26, align 8
  %80 = call %struct.value* @value_cast(%struct.type* %78, %struct.value* %79)
  store %struct.value* %80, %struct.value** %26, align 8
  br label %81

81:                                               ; preds = %76, %72
  %82 = load %struct.type*, %struct.type** %27, align 8
  %83 = call i32 @TYPE_LENGTH(%struct.type* %82)
  %84 = load i32, i32* @ALPHA_REGISTER_SIZE, align 4
  %85 = icmp slt i32 %83, %84
  br i1 %85, label %86, label %91

86:                                               ; preds = %81
  %87 = load %struct.type*, %struct.type** @builtin_type_int64, align 8
  store %struct.type* %87, %struct.type** %27, align 8
  %88 = load %struct.type*, %struct.type** %27, align 8
  %89 = load %struct.value*, %struct.value** %26, align 8
  %90 = call %struct.value* @value_cast(%struct.type* %88, %struct.value* %89)
  store %struct.value* %90, %struct.value** %26, align 8
  br label %91

91:                                               ; preds = %86, %81
  br label %143

92:                                               ; preds = %61
  %93 = load i32, i32* %20, align 4
  %94 = sext i32 %93 to i64
  %95 = icmp ult i64 %94, %45
  br i1 %95, label %96, label %105

96:                                               ; preds = %92
  %97 = load %struct.type*, %struct.type** %27, align 8
  %98 = call i32 @TYPE_LENGTH(%struct.type* %97)
  %99 = icmp eq i32 %98, 4
  br i1 %99, label %100, label %105

100:                                              ; preds = %96
  %101 = load %struct.type*, %struct.type** @builtin_type_ieee_double_little, align 8
  store %struct.type* %101, %struct.type** %27, align 8
  %102 = load %struct.type*, %struct.type** %27, align 8
  %103 = load %struct.value*, %struct.value** %26, align 8
  %104 = call %struct.value* @value_cast(%struct.type* %102, %struct.value* %103)
  store %struct.value* %104, %struct.value** %26, align 8
  br label %123

105:                                              ; preds = %96, %92
  %106 = load %struct.type*, %struct.type** %27, align 8
  %107 = call i32 @TYPE_LENGTH(%struct.type* %106)
  %108 = icmp eq i32 %107, 16
  br i1 %108, label %109, label %122

109:                                              ; preds = %105
  %110 = load i32, i32* %16, align 4
  %111 = and i32 %110, -16
  %112 = sub nsw i32 %111, 16
  store i32 %112, i32* %16, align 4
  %113 = load i32, i32* %16, align 4
  %114 = load %struct.value*, %struct.value** %26, align 8
  %115 = call i8* @VALUE_CONTENTS(%struct.value* %114)
  %116 = call i32 @write_memory(i32 %113, i8* %115, i32 16)
  %117 = load %struct.type*, %struct.type** %27, align 8
  %118 = call %struct.type* @lookup_pointer_type(%struct.type* %117)
  store %struct.type* %118, %struct.type** %27, align 8
  %119 = load %struct.type*, %struct.type** %27, align 8
  %120 = load i32, i32* %16, align 4
  %121 = call %struct.value* @value_from_pointer(%struct.type* %119, i32 %120)
  store %struct.value* %121, %struct.value** %26, align 8
  br label %122

122:                                              ; preds = %109, %105
  br label %123

123:                                              ; preds = %122, %100
  br label %143

124:                                              ; preds = %61
  %125 = load %struct.type*, %struct.type** %27, align 8
  %126 = call i32 @TYPE_LENGTH(%struct.type* %125)
  %127 = icmp eq i32 %126, 32
  br i1 %127, label %128, label %141

128:                                              ; preds = %124
  %129 = load i32, i32* %16, align 4
  %130 = and i32 %129, -16
  %131 = sub nsw i32 %130, 16
  store i32 %131, i32* %16, align 4
  %132 = load i32, i32* %16, align 4
  %133 = load %struct.value*, %struct.value** %26, align 8
  %134 = call i8* @VALUE_CONTENTS(%struct.value* %133)
  %135 = call i32 @write_memory(i32 %132, i8* %134, i32 32)
  %136 = load %struct.type*, %struct.type** %27, align 8
  %137 = call %struct.type* @lookup_pointer_type(%struct.type* %136)
  store %struct.type* %137, %struct.type** %27, align 8
  %138 = load %struct.type*, %struct.type** %27, align 8
  %139 = load i32, i32* %16, align 4
  %140 = call %struct.value* @value_from_pointer(%struct.type* %138, i32 %139)
  store %struct.value* %140, %struct.value** %26, align 8
  br label %141

141:                                              ; preds = %128, %124
  br label %143

142:                                              ; preds = %61
  br label %143

143:                                              ; preds = %142, %141, %123, %91
  %144 = load %struct.type*, %struct.type** %27, align 8
  %145 = call i32 @TYPE_LENGTH(%struct.type* %144)
  %146 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %147 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %146, i32 0, i32 1
  store i32 %145, i32* %147, align 8
  %148 = load i32, i32* %20, align 4
  %149 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %150 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %149, i32 0, i32 2
  store i32 %148, i32* %150, align 4
  %151 = load i32, i32* %20, align 4
  %152 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %153 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %152, i32 0, i32 1
  %154 = load i32, i32* %153, align 8
  %155 = add nsw i32 %151, %154
  %156 = add nsw i32 %155, 7
  %157 = and i32 %156, -8
  store i32 %157, i32* %20, align 4
  %158 = load %struct.value*, %struct.value** %26, align 8
  %159 = call i8* @VALUE_CONTENTS(%struct.value* %158)
  %160 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %161 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %160, i32 0, i32 0
  store i8* %159, i8** %161, align 8
  br label %162

162:                                              ; preds = %143
  %163 = load i32, i32* %19, align 4
  %164 = add nsw i32 %163, 1
  store i32 %164, i32* %19, align 4
  %165 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %166 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %165, i32 1
  store %struct.alpha_arg* %166, %struct.alpha_arg** %22, align 8
  br label %57

167:                                              ; preds = %57
  %168 = load i32, i32* %20, align 4
  %169 = sdiv i32 %168, 8
  store i32 %169, i32* %25, align 4
  %170 = load i32, i32* %25, align 4
  %171 = load i32, i32* @ALPHA_NUM_ARG_REGS, align 4
  %172 = icmp sgt i32 %170, %171
  br i1 %172, label %173, label %175

173:                                              ; preds = %167
  %174 = load i32, i32* @ALPHA_NUM_ARG_REGS, align 4
  store i32 %174, i32* %25, align 4
  br label %175

175:                                              ; preds = %173, %167
  %176 = load i32, i32* %20, align 4
  %177 = sext i32 %176 to i64
  %178 = icmp ult i64 %177, %45
  br i1 %178, label %179, label %180

179:                                              ; preds = %175
  store i32 0, i32* %20, align 4
  br label %185

180:                                              ; preds = %175
  %181 = load i32, i32* %20, align 4
  %182 = sext i32 %181 to i64
  %183 = sub i64 %182, %45
  %184 = trunc i64 %183 to i32
  store i32 %184, i32* %20, align 4
  br label %185

185:                                              ; preds = %180, %179
  %186 = load i32, i32* %20, align 4
  %187 = load i32, i32* %16, align 4
  %188 = sub nsw i32 %187, %186
  store i32 %188, i32* %16, align 4
  %189 = load i32, i32* %16, align 4
  %190 = and i32 %189, -16
  store i32 %190, i32* %16, align 4
  %191 = load i32, i32* %14, align 4
  store i32 %191, i32* %19, align 4
  br label %192

192:                                              ; preds = %246, %217, %185
  %193 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %194 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %193, i32 -1
  store %struct.alpha_arg* %194, %struct.alpha_arg** %22, align 8
  %195 = load i32, i32* %19, align 4
  %196 = add nsw i32 %195, -1
  store i32 %196, i32* %19, align 4
  %197 = icmp sge i32 %196, 0
  br i1 %197, label %198, label %256

198:                                              ; preds = %192
  %199 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %200 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %199, i32 0, i32 0
  %201 = load i8*, i8** %200, align 8
  store i8* %201, i8** %28, align 8
  %202 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %203 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %202, i32 0, i32 2
  %204 = load i32, i32* %203, align 4
  store i32 %204, i32* %29, align 4
  %205 = load %struct.alpha_arg*, %struct.alpha_arg** %22, align 8
  %206 = getelementptr inbounds %struct.alpha_arg, %struct.alpha_arg* %205, i32 0, i32 1
  %207 = load i32, i32* %206, align 8
  store i32 %207, i32* %30, align 4
  %208 = load i32, i32* %29, align 4
  %209 = sext i32 %208 to i64
  %210 = icmp ult i64 %209, %45
  br i1 %210, label %211, label %246

211:                                              ; preds = %198
  %212 = load i32, i32* %29, align 4
  %213 = load i32, i32* %30, align 4
  %214 = add nsw i32 %212, %213
  %215 = sext i32 %214 to i64
  %216 = icmp ule i64 %215, %45
  br i1 %216, label %217, label %224

217:                                              ; preds = %211
  %218 = load i32, i32* %29, align 4
  %219 = sext i32 %218 to i64
  %220 = getelementptr inbounds i8, i8* %47, i64 %219
  %221 = load i8*, i8** %28, align 8
  %222 = load i32, i32* %30, align 4
  %223 = call i32 @memcpy(i8* %220, i8* %221, i32 %222)
  br label %192

224:                                              ; preds = %211
  %225 = load i32, i32* %29, align 4
  %226 = sext i32 %225 to i64
  %227 = sub i64 %45, %226
  %228 = trunc i64 %227 to i32
  store i32 %228, i32* %31, align 4
  %229 = load i32, i32* %29, align 4
  %230 = sext i32 %229 to i64
  %231 = getelementptr inbounds i8, i8* %47, i64 %230
  %232 = load i8*, i8** %28, align 8
  %233 = load i32, i32* %31, align 4
  %234 = call i32 @memcpy(i8* %231, i8* %232, i32 %233)
  %235 = load i32, i32* %31, align 4
  %236 = load i32, i32* %29, align 4
  %237 = add nsw i32 %236, %235
  store i32 %237, i32* %29, align 4
  %238 = load i32, i32* %31, align 4
  %239 = load i8*, i8** %28, align 8
  %240 = sext i32 %238 to i64
  %241 = getelementptr inbounds i8, i8* %239, i64 %240
  store i8* %241, i8** %28, align 8
  %242 = load i32, i32* %31, align 4
  %243 = load i32, i32* %30, align 4
  %244 = sub nsw i32 %243, %242
  store i32 %244, i32* %30, align 4
  br label %245

245:                                              ; preds = %224
  br label %246

246:                                              ; preds = %245, %198
  %247 = load i32, i32* %16, align 4
  %248 = load i32, i32* %29, align 4
  %249 = add nsw i32 %247, %248
  %250 = sext i32 %249 to i64
  %251 = sub i64 %250, %45
  %252 = trunc i64 %251 to i32
  %253 = load i8*, i8** %28, align 8
  %254 = load i32, i32* %30, align 4
  %255 = call i32 @write_memory(i32 %252, i8* %253, i32 %254)
  br label %192

256:                                              ; preds = %192
  %257 = load i32, i32* %17, align 4
  %258 = icmp ne i32 %257, 0
  br i1 %258, label %259, label %263

259:                                              ; preds = %256
  %260 = load i32, i32* @ALPHA_REGISTER_SIZE, align 4
  %261 = load i32, i32* %18, align 4
  %262 = call i32 @store_unsigned_integer(i8* %47, i32 %260, i32 %261)
  br label %263

263:                                              ; preds = %259, %256
  store i32 0, i32* %19, align 4
  br label %264

264:                                              ; preds = %291, %263
  %265 = load i32, i32* %19, align 4
  %266 = load i32, i32* %25, align 4
  %267 = icmp slt i32 %265, %266
  br i1 %267, label %268, label %294

268:                                              ; preds = %264
  %269 = load %struct.regcache*, %struct.regcache** %12, align 8
  %270 = load i64, i64* @ALPHA_A0_REGNUM, align 8
  %271 = load i32, i32* %19, align 4
  %272 = sext i32 %271 to i64
  %273 = add nsw i64 %270, %272
  %274 = load i32, i32* %19, align 4
  %275 = load i32, i32* @ALPHA_REGISTER_SIZE, align 4
  %276 = mul nsw i32 %274, %275
  %277 = sext i32 %276 to i64
  %278 = getelementptr inbounds i8, i8* %47, i64 %277
  %279 = call i32 @regcache_cooked_write(%struct.regcache* %269, i64 %273, i8* %278)
  %280 = load %struct.regcache*, %struct.regcache** %12, align 8
  %281 = load i64, i64* @ALPHA_FPA0_REGNUM, align 8
  %282 = load i32, i32* %19, align 4
  %283 = sext i32 %282 to i64
  %284 = add nsw i64 %281, %283
  %285 = load i32, i32* %19, align 4
  %286 = load i32, i32* @ALPHA_REGISTER_SIZE, align 4
  %287 = mul nsw i32 %285, %286
  %288 = sext i32 %287 to i64
  %289 = getelementptr inbounds i8, i8* %47, i64 %288
  %290 = call i32 @regcache_cooked_write(%struct.regcache* %280, i64 %284, i8* %289)
  br label %291

291:                                              ; preds = %268
  %292 = load i32, i32* %19, align 4
  %293 = add nsw i32 %292, 1
  store i32 %293, i32* %19, align 4
  br label %264

294:                                              ; preds = %264
  %295 = load %struct.regcache*, %struct.regcache** %12, align 8
  %296 = load i32, i32* @ALPHA_SP_REGNUM, align 4
  %297 = load i32, i32* %16, align 4
  %298 = call i32 @regcache_cooked_write_signed(%struct.regcache* %295, i32 %296, i32 %297)
  %299 = load i32, i32* %16, align 4
  %300 = load i8*, i8** %23, align 8
  call void @llvm.stackrestore(i8* %300)
  ret i32 %299
}

declare dso_local i64 @alloca(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @regcache_cooked_write_signed(%struct.regcache*, i32, i32) #1

declare dso_local %struct.type* @check_typedef(i32) #1

declare dso_local i32 @VALUE_TYPE(%struct.value*) #1

declare dso_local i32 @TYPE_CODE(%struct.type*) #1

declare dso_local i32 @TYPE_LENGTH(%struct.type*) #1

declare dso_local %struct.value* @value_cast(%struct.type*, %struct.value*) #1

declare dso_local i32 @write_memory(i32, i8*, i32) #1

declare dso_local i8* @VALUE_CONTENTS(%struct.value*) #1

declare dso_local %struct.type* @lookup_pointer_type(%struct.type*) #1

declare dso_local %struct.value* @value_from_pointer(%struct.type*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @store_unsigned_integer(i8*, i32, i32) #1

declare dso_local i32 @regcache_cooked_write(%struct.regcache*, i64, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
